--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "node": ">=4"
   },
   "scripts": {
-    "test": "xo && ava"
+    "test": "xo && nyc ava",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "files": [
     "index.js"
@@ -32,7 +33,14 @@
   "devDependencies": {
     "ava": "*",
     "aws-sdk": "^2.2.33",
+    "coveralls": "^2.13.0",
+    "nyc": "^10.2.0",
     "sinon": "^1.17.2",
     "xo": "*"
+  },
+  "nyc": {
+    "exclude": [
+      "fixtures"
+    ]
   }
 }
